--- a/iDecide4u/Base.lproj/Main.storyboard
+++ b/iDecide4u/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vcH-3T-7AR">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vcH-3T-7AR">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
     </dependencies>
     <scenes>
         <!--iDecide4u-->
@@ -16,24 +16,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sIB-DH-NBy">
-                                <rect key="frame" x="0.0" y="556" width="600" height="44"/>
-                                <items>
-                                    <barButtonItem width="12" systemItem="fixedSpace" id="08C-hT-0bb"/>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="IBp-Nb-aN3"/>
-                                    <barButtonItem title="Decide!" id="Wnu-56-eQJ">
-                                        <connections>
-                                            <action selector="decideButtonPressed:" destination="bDO-PX-3D9" id="twc-NC-Rq9"/>
-                                        </connections>
-                                    </barButtonItem>
-                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="LV0-nP-xev"/>
-                                    <barButtonItem systemItem="trash" id="jTl-GC-DbU">
-                                        <connections>
-                                            <action selector="trashButtonPressed:" destination="bDO-PX-3D9" id="MjG-hr-nQa"/>
-                                        </connections>
-                                    </barButtonItem>
-                                </items>
-                            </toolbar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="NR9-N2-VD1">
                                 <rect key="frame" x="0.0" y="64" width="600" height="492"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -49,6 +31,28 @@
                                     <outlet property="dataSource" destination="bDO-PX-3D9" id="xtv-pG-hOM"/>
                                 </connections>
                             </tableView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sIB-DH-NBy">
+                                <rect key="frame" x="0.0" y="556" width="600" height="44"/>
+                                <items>
+                                    <barButtonItem systemItem="save" id="08C-hT-0bb">
+                                        <connections>
+                                            <segue destination="qo3-m4-MMb" kind="presentation" id="Ui4-K8-Jko"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="IBp-Nb-aN3"/>
+                                    <barButtonItem title="Decide!" id="Wnu-56-eQJ">
+                                        <connections>
+                                            <action selector="decideButtonPressed:" destination="bDO-PX-3D9" id="twc-NC-Rq9"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="LV0-nP-xev"/>
+                                    <barButtonItem systemItem="trash" id="jTl-GC-DbU">
+                                        <connections>
+                                            <action selector="trashButtonPressed:" destination="bDO-PX-3D9" id="MjG-hr-nQa"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -74,7 +78,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cBr-eg-33k" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2339" y="-317"/>
+            <point key="canvasLocation" x="2241" y="-317"/>
         </scene>
         <!--Add new item-->
         <scene sceneID="wrr-fg-wFD">
@@ -129,7 +133,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="M72-li-lVy" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2339" y="463"/>
+            <point key="canvasLocation" x="2967" y="451"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="gbE-Ds-U53">
@@ -165,7 +169,68 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sQ9-DD-vbR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1527" y="463"/>
+            <point key="canvasLocation" x="2967" y="-317"/>
+        </scene>
+        <!--Save list-->
+        <scene sceneID="Exi-rR-P5a">
+            <objects>
+                <viewController id="DSc-8l-0u2" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="3Ow-Wn-I21"/>
+                        <viewControllerLayoutGuide type="bottom" id="8R4-6m-eKk"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="PF7-Cs-56A">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Dg0-5W-E3G">
+                                <rect key="frame" x="150" y="114" width="300" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="dVb-T2-nPe"/>
+                                    <constraint firstAttribute="height" constant="30" id="lmh-aB-XPV"/>
+                                    <constraint firstAttribute="width" constant="300" id="n3J-NK-zQJ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C3N-HC-clk">
+                                <rect key="frame" x="254" y="194" width="91" height="30"/>
+                                <state key="normal" title="Save this list!">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="C3N-HC-clk" firstAttribute="top" secondItem="Dg0-5W-E3G" secondAttribute="bottom" constant="50" id="ILP-Te-bY6"/>
+                            <constraint firstAttribute="centerX" secondItem="C3N-HC-clk" secondAttribute="centerX" id="c8x-MZ-fTW"/>
+                            <constraint firstItem="Dg0-5W-E3G" firstAttribute="top" secondItem="3Ow-Wn-I21" secondAttribute="bottom" constant="50" id="kf0-FR-DMb"/>
+                            <constraint firstAttribute="centerX" secondItem="Dg0-5W-E3G" secondAttribute="centerX" id="zM0-2o-e8h"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Save list" id="ofj-R3-end"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JtX-iD-nVp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2241" y="451"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="QM6-vq-4Mh">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="qo3-m4-MMb" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="yKO-ra-Ewm">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="DSc-8l-0u2" kind="relationship" relationship="rootViewController" id="9Jc-Hq-rAA"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Esa-zh-Jz3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1527" y="451"/>
         </scene>
     </scenes>
 </document>
