--- a/iDecide4u/Base.lproj/Main.storyboard
+++ b/iDecide4u/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vcH-3T-7AR">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vcH-3T-7AR">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -104,7 +104,7 @@
                                     <constraint firstAttribute="height" constant="44" id="yCM-Vd-Zhb"/>
                                 </constraints>
                                 <items>
-                                    <barButtonItem systemItem="save" id="08C-hT-0bb">
+                                    <barButtonItem enabled="NO" systemItem="save" id="08C-hT-0bb">
                                         <connections>
                                             <action selector="saveButtonPressed:" destination="bDO-PX-3D9" id="TN0-XG-L3s"/>
                                         </connections>
@@ -183,6 +183,7 @@
                     <navigationItem key="navigationItem" title="iDecide4u" id="Pls-KV-13e"/>
                     <connections>
                         <outlet property="addButton" destination="cxL-6p-fHz" id="dLc-EL-AbV"/>
+                        <outlet property="saveButton" destination="08C-hT-0bb" id="yQl-w0-RHh"/>
                         <outlet property="tableView" destination="NR9-N2-VD1" id="Vwc-Eb-xzZ"/>
                         <outlet property="tableViewBottomConstraint" destination="svU-5j-XEX" id="zLb-np-xWD"/>
                         <outlet property="textFieldAddNewOption" destination="oMC-BU-pKD" id="PkA-Y0-wrF"/>
