--- a/iDecide4u/Base.lproj/Main.storyboard
+++ b/iDecide4u/Base.lproj/Main.storyboard
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vcH-3T-7AR">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vcH-3T-7AR">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--iDecide4u-->
         <scene sceneID="RuH-eA-q1F">
             <objects>
-                <viewController id="bDO-PX-3D9" customClass="IDFYMainSceneViewController" sceneMemberID="viewController">
+                <viewController id="bDO-PX-3D9" customClass="IDFYMainSceneViewController" customModule="iDecide4u" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="mEo-xk-zSp"/>
                         <viewControllerLayoutGuide type="bottom" id="s9P-Db-KGO"/>
@@ -38,7 +38,7 @@
                                             </mask>
                                         </variation>
                                         <connections>
-                                            <action selector="addButtonPressed:" destination="bDO-PX-3D9" eventType="touchUpInside" id="met-a6-7U8"/>
+                                            <action selector="addButtonPressed:" destination="bDO-PX-3D9" eventType="touchUpInside" id="YHr-Kf-etO"/>
                                         </connections>
                                     </button>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Add a new option" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oMC-BU-pKD">
@@ -106,19 +106,19 @@
                                 <items>
                                     <barButtonItem enabled="NO" systemItem="save" id="08C-hT-0bb">
                                         <connections>
-                                            <action selector="saveButtonPressed:" destination="bDO-PX-3D9" id="TN0-XG-L3s"/>
+                                            <action selector="saveButtonPressed:" destination="bDO-PX-3D9" id="zdb-gP-TeO"/>
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="IBp-Nb-aN3"/>
                                     <barButtonItem title="Decide!" id="Wnu-56-eQJ">
                                         <connections>
-                                            <action selector="decideButtonPressed:" destination="bDO-PX-3D9" id="twc-NC-Rq9"/>
+                                            <action selector="decideButtonPressed:" destination="bDO-PX-3D9" id="Kx2-Ag-rNw"/>
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="LV0-nP-xev"/>
                                     <barButtonItem systemItem="trash" id="jTl-GC-DbU">
                                         <connections>
-                                            <action selector="trashButtonPressed:" destination="bDO-PX-3D9" id="MjG-hr-nQa"/>
+                                            <action selector="trashButtonPressed:" destination="bDO-PX-3D9" id="xhA-Z3-7QF"/>
                                         </connections>
                                     </barButtonItem>
                                 </items>
@@ -182,13 +182,13 @@
                     </view>
                     <navigationItem key="navigationItem" title="iDecide4u" id="Pls-KV-13e"/>
                     <connections>
-                        <outlet property="addButton" destination="cxL-6p-fHz" id="dLc-EL-AbV"/>
-                        <outlet property="saveButton" destination="08C-hT-0bb" id="yQl-w0-RHh"/>
-                        <outlet property="tableView" destination="NR9-N2-VD1" id="Vwc-Eb-xzZ"/>
-                        <outlet property="tableViewBottomConstraint" destination="svU-5j-XEX" id="zLb-np-xWD"/>
-                        <outlet property="textFieldAddNewOption" destination="oMC-BU-pKD" id="PkA-Y0-wrF"/>
-                        <outlet property="textFieldTrailingSpaceConstraint" destination="INZ-P3-HR5" id="4B8-Io-6F4"/>
-                        <outlet property="toolbar" destination="sIB-DH-NBy" id="2gq-Hj-nVT"/>
+                        <outlet property="addButton" destination="cxL-6p-fHz" id="k0d-Gj-xqB"/>
+                        <outlet property="saveButton" destination="08C-hT-0bb" id="ayv-tM-vHa"/>
+                        <outlet property="tableView" destination="NR9-N2-VD1" id="unt-IZ-U7f"/>
+                        <outlet property="tableViewBottomConstraint" destination="svU-5j-XEX" id="ySG-I7-yCd"/>
+                        <outlet property="textFieldAddNewOption" destination="oMC-BU-pKD" id="XzP-kC-UEQ"/>
+                        <outlet property="textFieldTrailingSpaceContraint" destination="INZ-P3-HR5" id="uey-Of-1ha"/>
+                        <outlet property="toolbar" destination="sIB-DH-NBy" id="QLE-UZ-k6F"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cBr-eg-33k" userLabel="First Responder" sceneMemberID="firstResponder"/>
