--- a/iDecide4u/Base.lproj/Main.storyboard
+++ b/iDecide4u/Base.lproj/Main.storyboard
@@ -107,7 +107,7 @@
                                     <barButtonItem enabled="NO" systemItem="organize" id="08C-hT-0bb">
                                         <connections>
                                             <action selector="saveButtonPressed:" destination="bDO-PX-3D9" id="zdb-gP-TeO"/>
-                                            <segue destination="DUy-D0-VXn" kind="showDetail" id="2g4-6u-2uU"/>
+                                            <segue destination="DUy-D0-VXn" kind="presentation" id="2g4-6u-2uU"/>
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="IBp-Nb-aN3"/>
@@ -217,7 +217,13 @@
                             <outlet property="delegate" destination="BCm-Qb-2ah" id="PDq-3d-eXW"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="List operations" id="4RS-cc-9tE"/>
+                    <navigationItem key="navigationItem" title="List operations" id="4RS-cc-9tE">
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="3qJ-QZ-Upy">
+                            <connections>
+                                <action selector="doneButtonPressed:" destination="BCm-Qb-2ah" id="2aL-fC-seN"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BpU-Ro-bpZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
